--- a/HomeWork_Site/HomeWork_Site.csproj
+++ b/HomeWork_Site/HomeWork_Site.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7A7F56AD-E6C5-43C6-858D-9F078C0EA1F6}</ProjectGuid>
+    <ProjectGuid>{03BEB83F-9295-428A-9509-A2B4BFCDDE0D}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HomeWork_Delegate</RootNamespace>
-    <AssemblyName>HomeWork_Delegate</AssemblyName>
+    <RootNamespace>HomeWork_Site</RootNamespace>
+    <AssemblyName>HomeWork_Site</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,6 +48,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Elements\Buttons.cs" />
+    <Compile Include="Elements\EditBoxes.cs" />
+    <Compile Include="Elements\Links.cs" />
+    <Compile Include="Elements\Menus.cs" />
+    <Compile Include="Elements\Pics.cs" />
+    <Compile Include="Elements\RadioButton.cs" />
+    <Compile Include="Elements\Selectors.cs" />
+    <Compile Include="Elements\Text.cs" />
+    <Compile Include="Elements\WebElements.cs" />
+    <Compile Include="Interfaces\IChangable.cs" />
+    <Compile Include="Interfaces\IClickable.cs" />
+    <Compile Include="Interfaces\ISelectable.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
